--- a/src/app/componentes/header/header.html
+++ b/src/app/componentes/header/header.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+
+<header class="header">
+  <div class="logo">
+    <span>✈</span>
+    <h1>Viagens Baratas</h1>
+  </div>
+
+  <nav class="nav">
+    <a routerLink="/">Welcome</a>
+    <a routerLink="/Destinos">Destinos</a>
+    <a routerLink="/">Login</a>
+
+  </nav>
+</header>
+
