--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,1 +1,49 @@
-<p>login works!</p>
+<div class="login-page">
+
+  <!-- Caixa de Login -->
+  <div class="login-card">
+
+    <h2>Entrar</h2>
+    <p class="subtitle">
+      Aceda à sua conta para ver ofertas exclusivas
+    </p>
+
+    <form>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          placeholder="exemplo@email.com"
+          required
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Palavra-passe</label>
+        <input
+          type="password"
+          id="password"
+          placeholder="********"
+          required
+        />
+      </div>
+
+      <button type="submit" class="btn-login">
+        Entrar
+      </button>
+
+    </form>
+
+    <div class="login-footer">
+      <p>
+        Ainda não tem conta?
+        <a routerLink="/register">Criar conta</a>
+      </p>
+    </div>
+
+  </div>
+
+</div>
+
